Fix cards gap

--- a/tour/src/pages/Tours/components/Cards/Cards.scss
+++ b/tour/src/pages/Tours/components/Cards/Cards.scss
@@ -1,6 +1,6 @@
 .Card {
   display: grid;
-  gap: 30px;
+  gap: 50px;
   grid-template-columns: repeat(4, minmax(0, 1fr));
   justify-content: start;
   margin-top: 30px;
